opam-version: "2.0"
name: "hkdf"
maintainer: "Hannes Mehnert <hannes@mehnert.org>"
authors: "Hannes Mehnert <hannes@mehnert.org>"
license: "BSD-2-Clause"
homepage: "https://github.com/hannesm/ocaml-hkdf"
doc: "https://hannesm.github.io/ocaml-hkdf/doc"
bug-reports: "https://github.com/hannesm/ocaml-hkdf/issues"
depends: [
  "ocaml" {>= "4.07.0"}
  "dune"
  "digestif" {>= "1.2.0"}
  "alcotest" {with-test}
  "ohex" {with-test & >= "0.2.0"}
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/hannesm/ocaml-hkdf.git"
synopsis: "HMAC-based Extract-and-Expand Key Derivation Function (RFC 5869)"
description: """
An implementation of [HKDF](https://tools.ietf.org/html/rfc5869) using
[digestif](https://github.com/mirage/digestif).
"""
